gitops/overlays/dev/connectivity-link.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-webapi-gw
  labels:
    kuadrant.io/gateway: "true"
spec:
  gatewayClassName: istio
  listeners:
    - name: api
      hostname: api-dev.demo-webapi.example.com
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: api-demo-webapi-gw-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-webapi
spec:
  parentRefs:
    - name: demo-webapi-gw
  hostnames:
    - api-dev.demo-webapi.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-webapi
          port: 8080
#---
#apiVersion: kuadrant.io/v1
#kind: TLSPolicy
#metadata:
#  name: demo-webapi-gw-tls
#spec:
#  targetRef:
#    group: gateway.networking.k8s.io
#    kind: Gateway
#    name: demo-webapi-gw
#  issuerRef:
#    group: cert-manager.io
#    kind: ClusterIssuer
#    name: letsencrypt-prod
#---
#apiVersion: kuadrant.io/v1
#kind: DNSPolicy
#metadata:
#  name: demo-webapi-gw-dns
#spec:
#  healthCheck:
#    path: /api/ping
#    interval: 1m
#    failureThreshold: 3
#  loadBalancing:
#    defaultGeo: true
#    geo: GEO-NA
#    weight: 120
#  targetRef:
#    group: gateway.networking.k8s.io
#    kind: Gateway
#    name: demo-webapi-gw
#  providerRefs:
#    - name: aws-credentials
